Confirm user handler.
